--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -16,7 +16,7 @@ import '@styles/global.css';
     <title>Portal - HONK! Fest West</title>
   </head>
   <body class="min-h-full bg-gray-50">
-    <header class="pb-24 bg-gradient-to-r from-sky-800 to-cyan-600">
+    <header class="pb-24 bg-gradient-to-r from-purple-800 to-rose-600">
       <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8 pt-4">
         <h1 class="text-white font-semibold text-4xl hidden">
           HONK! FEST WEST - Portal
