--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -9,6 +9,21 @@ import { rawContent as info } from '@data/donate_info.md';
 <BaseLayout title="Donate">
   <div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
     <div class="w-full md:w-1/3 flex flex-col gap-5">
+
+      <div class="content-container">
+        <div class="flex flex-col items-center gap-y-5 my-2">
+          <Title title="#GivingTuesday" subtitle="2023" />
+          <iframe
+            title="HONK! Fest West Donation Widget"
+            width="300"
+            height="500"
+            src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
+            scrolling="no"
+            marginHeight="0"
+            marginWidth="0"
+            frameBorder="0"></iframe>
+        </div>
+      </div>
       <div class="content-container">
         <div class="flex flex-col items-center gap-y-5 my-2">
           <a
