Portal | Update links

--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -1,6 +1,6 @@
 ---
-import FestivalCountDown from '@components/FestivalCountDown.svelte';
-import '@styles/global.css';
+import FestivalCountDown from "@components/FestivalCountDown.svelte";
+import "@styles/global.css";
 ---
 
 <!DOCTYPE html>
@@ -250,7 +250,7 @@ import '@styles/global.css';
                     <a
                       class="font-semibold text-blue-500 hover:text-blue-600"
                       href="https://drive.google.com/drive/folders/0AJP9cXRSlnowUk9PVA"
-                      >Committee Minutes | Meeting Surveys</a
+                      >Committee Minutes | Agendas</a
                     >
                   </li>
                   <li class="py-3">
@@ -270,8 +270,15 @@ import '@styles/global.css';
                   <li class="py-3">
                     <a
                       class="font-semibold text-blue-500 hover:text-blue-600"
+                      href="https://drive.google.com/drive/folders/0AEyL2GDYHnWVUk9PVA"
+                      >External Communications</a
+                    >
+                  </li>
+                  <li class="py-3">
+                    <a
+                      class="font-semibold text-blue-500 hover:text-blue-600"
                       href="https://drive.google.com/drive/folders/0AOsaXwyq5LFfUk9PVA"
-                      >Grants | Fundraising</a
+                      >Grants | Fundraising | Sponsorship</a
                     >
                   </li>
                   <li class="py-3">
@@ -279,13 +286,6 @@ import '@styles/global.css';
                       class="font-semibold text-blue-500 hover:text-blue-600"
                       href="https://drive.google.com/drive/folders/0ACpGc0ZRSwnXUk9PVA"
                       >Hospitality | Housing | Food | Transpo</a
-                    >
-                  </li>
-                  <li class="py-3">
-                    <a
-                      class="font-semibold text-blue-500 hover:text-blue-600"
-                      href="https://drive.google.com/drive/u/1/folders/0AEyL2GDYHnWVUk9PVA"
-                      >Marketing | Media</a
                     >
                   </li>
                   <li class="py-3">
@@ -299,7 +299,7 @@ import '@styles/global.css';
                     <a
                       class="font-semibold text-blue-500 hover:text-blue-600"
                       href="https://drive.google.com/drive/folders/0ALrOFO7j6Fr0Uk9PVA"
-                      >Planning | Operations</a
+                      >Planning | Operations | Permits</a
                     >
                   </li>
                   <li class="py-3">
@@ -327,8 +327,36 @@ import '@styles/global.css';
               </div>
             </div>
           </section>
+          <section>
+            <div class="rounded-lg bg-white overflow-hidden shadow">
+              <div class="p-4">
+                <h2
+                  class="text-base font-medium bg-blue-800 text-blue-100 px-3 py-1 rounded"
+                  id="slack-title"
+                >
+                  Community Drives
+                </h2>
+                <ul class="mt-2 ml-3 divide-y divide-gray-200">
+                  <li class="py-3">
+                    <a
+                      class="font-semibold text-blue-500 hover:text-blue-600"
+                      href="https://drive.google.com/drive/folders/0ABEsDebq3yxgUk9PVA"
+                      >HONK! All Stars</a
+                    >
+                  </li>
+                  <li class="py-3">
+                    <a
+                      class="font-semibold text-blue-500 hover:text-blue-600"
+                      href="https://drive.google.com/drive/folders/0AF2f-Bp9M5VDUk9PVA"
+                      >Tacoma THONK!</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
-    </main>
-  </body>
+    </main></body
+  >
 </html>
