Festival Update coming soon text

--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -9,6 +9,6 @@ import BackToTop from "@components/BackToTop.astro";
 <BaseLayout title="2024 - Festival">
   <section class="content-container text-center">
     <p class="text-5xl font-bold mt-4">Festival . 2024</p>
-    <p class="text-3xl font-bold mt-10 mb-4">More Info Coming Soon</p>
+    <p class="text-3xl font-bold mt-10 mb-4">More info coming soon</p>
   </section>
 </BaseLayout>
