Update band app deadline image

--- a/src/components/home/BandAppDeadline.astro
+++ b/src/components/home/BandAppDeadline.astro
@@ -6,7 +6,7 @@ import Title from "@components/Title.astro";
 <div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
   <a href="https://forms.gle/ytEWj51dHagkwECf7">
     <Image
-      src="https://ik.imagekit.io/thegoldendino/hfw/2024/band-app-deadline-2024_pR8yXLGoI.png?updatedAt=1703055893050&tr=w-1080%2Ch-1080%2Cfo-auto"
+      src="https://ik.imagekit.io/thegoldendino/hfw/2024/band-app-deadline-2024_mIKkAfz_U.png?updatedAt=1703309664920"
       alt="HONK! Festival West 2024 Band Application Deadline is January 31st, 2024"
       aspectRatio="1:1"
       width="300"
