Home | Update Band application deadline info

--- a/src/components/home/BandAppDeadline.astro
+++ b/src/components/home/BandAppDeadline.astro
@@ -18,21 +18,23 @@ import Title from "@components/Title.astro";
 <div class="z-10">
   <Title title="HONK! Fest West 2024" subtitle="Application" />
   <p>
-    Complete the <a href="https://forms.gle/ytEWj51dHagkwECf7"
-      >Application form</a
-    > by January 31, 2024. If not, your application is not likely to be accepted,
-    but there is a section to explain your circumstances if you truly think you are
-    a good fit for the festival. If you have questions about payment, you've never
-    attended a HONK! festival or you're not sure what a HONK! band or festival entails,
-    please review <a
+    All bands must submit an <a
+      class="underline"
+      href="https://forms.gle/ytEWj51dHagkwECf7">Application form</a
+    >
+    to participate in HONK! Fest West (deadline <span class="font-bold"
+      >January 31, 2024</span
+    >). If you’ve never attended a HONK! festival, you’re not sure what a HONK!
+    band or festival entails, or you’re curious about payment, please review <a
+      class="underline"
       href="https://drive.google.com/file/d/1rgKTo5TqPB34ooA68LUK-7mYkYTttChN/view"
       >this document</a
     > before applying.
   </p>
   <br />
   <p>
-    <a href="https://forms.gle/ytEWj51dHagkwECf7" class="underline">
-      Apply here
+    <a href="https://forms.gle/ytEWj51dHagkwECf7" class="">
+      &gt;&gt; Apply HERE &lt;&lt;
     </a>
   </p>
   <br />
