--- a/src/pages/volunteer/housing-form.astro
+++ b/src/pages/volunteer/housing-form.astro
@@ -4,14 +4,11 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 
 <BaseLayout title="New Volunteer Form">
   <div class="content-container">
-    <!-- <iframe
+    <iframe
       title="Host Housing Questionnaire"
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdImCNe-tPXB2ezQBkSVnoZyvT15xkxl4ONjziT9VSwZzkuVw/viewform?embedded=true"
+      src="https://forms.gle/FWVMn7AP2w4oEkW46"
       width="640"
       height="3634">Loading…</iframe
-    > -->
-    <h2 class="text-center text-4xl text-white font-bold opacity-95">
-      Coming Soon
-    </h2>
+    >
   </div>
 </BaseLayout>
