--- a/src/components/home/BandAppDeadline.astro
+++ b/src/components/home/BandAppDeadline.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import Title from "@components/Title.astro";
 ---
 
@@ -8,8 +8,8 @@ import Title from "@components/Title.astro";
     <Image
       src="https://ik.imagekit.io/thegoldendino/hfw/2024/band-app-deadline-2024_mIKkAfz_U.png?updatedAt=1703309664920"
       alt="HONK! Festival West 2024 Band Application Deadline is January 31st, 2024"
-      aspectRatio="1:1"
       width="300"
+      height="300"
       class="h-auto mx-auto"
       format="png"
     />
