--- a/src/components/home/BonfireMerch.astro
+++ b/src/components/home/BonfireMerch.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from '@astrojs/image/components';
-import Title from '@components/Title.astro';
+import { Image } from "astro:assets";
+import Title from "@components/Title.astro";
 ---
 
 <div
@@ -9,32 +9,32 @@ import Title from '@components/Title.astro';
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/w-sf-tee_M8LoplcrPt.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265502"
     alt="Women's Tee"
-    aspectRatio="1:1"
     width="175"
+    height="175"
     class="h-auto mx-auto"
     format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/hoodie_SeVGLGU0P.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265358"
     alt="Hoodie"
-    aspectRatio="1:1"
     width="175"
+    height="175"
     class="h-auto mx-auto"
     format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/sweatshirt_wQDzFBnhe.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265376"
     alt="Sweatshirt"
-    aspectRatio="1:1"
     width="175"
+    height="175"
     class="h-auto mx-auto"
     format="jpeg"
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/unisex-tank_6K0RGsM-c.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265418"
     alt="Unisex Tank"
-    aspectRatio="1:1"
     width="175"
+    height="175"
     class="h-auto mx-auto"
     format="jpeg"
   />
