--- a/src/components/home/GivingTuesday.astro
+++ b/src/components/home/GivingTuesday.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from '@astrojs/image/components';
-import Title from '@components/Title.astro';
+import { Image } from "astro:assets";
+import Title from "@components/Title.astro";
 ---
 
 <div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
