--- a/src/components/old/2021Summary.astro
+++ b/src/components/old/2021Summary.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@astrojs/image/components';
+import { Image } from "astro:assets";
 ---
 
 <div class="md:w-1/4 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col z-10">
