--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,16 +1,16 @@
 ---
-import Head from '@components/base-head/BaseHead.astro';
-import Header from '@components/Header.astro';
-import Footer from '@components/Footer.astro';
-import BackgroundImage from '@components/BackgroundImage.astro';
-import nav from '@data/nav.toml';
-import footer from '@data/footer.toml';
-import social from '@data/social.toml';
+import Head from "@components/base-head/BaseHead.astro";
+import Header from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
+import BackgroundImage from "@components/BackgroundImage.astro";
+import nav from "@data/nav.toml";
+import footer from "@data/footer.toml";
+import social from "@data/social.toml";
 
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <!-- HEAD -->
   <head>
