--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import BaseLayout from "@layouts/BaseLayout.astro";
 import LinkBlurb from "@components/LinkBlurb.astro";
 import NewsletterForm from "@components/NewsletterForm.astro";
@@ -21,9 +21,9 @@ import BandAppDeadline from "@components/home/BandAppDeadline.astro";
       <Image
         src="https://ik.imagekit.io/thegoldendino/hfw/2023/android-group_BIvVp6J2w.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668315813976"
         alt="Let Us Transform"
-        class="lg:absolute lg:-top-8"
-        aspectRatio="800:513"
-        width="700"
+        class="lg:absolute lg:-top-8 w-[800px]"
+        width="800"
+        height="513"
         format="png"
       />
     </section>
