--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@astrojs/image/components';
+import { Image } from "astro:assets";
 ---
 
 <a
@@ -11,7 +11,6 @@ import { Image } from '@astrojs/image/components';
     alt="GiveBIG 2024"
     width="300"
     height="300"
-    aspectRatio="1:1"
     class="h-auto w-auto mx-auto"
     format="png"
   />
