--- a/src/components/old/VolunteerCoordinatorNeeded.astro
+++ b/src/components/old/VolunteerCoordinatorNeeded.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from '@astrojs/image/components';
-import Title from '@components/Title.astro';
+import { Image } from "astro:assets";
+import Title from "@components/Title.astro";
 ---
 
 <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
