--- a/src/components/post-blurb/OneColTemplate.astro
+++ b/src/components/post-blurb/OneColTemplate.astro
@@ -1,7 +1,7 @@
 ---
-import { Image } from '@astrojs/image/components';
-import Title from '@components/Title.astro';
-import DateTime from './DateTime.astro';
+import { Image } from "astro:assets";
+import Title from "@components/Title.astro";
+import DateTime from "./DateTime.astro";
 
 const { post } = Astro.props;
 ---
@@ -19,7 +19,7 @@ const { post } = Astro.props;
         src={post.image_url}
         alt={`${post.title} ${post.subtitle}`}
         height="245"
-        aspectRatio={post.image_ratio}
+        width="245"
         format={post.image_format}
       />
     </a>
