--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Title from "@components/Title.astro";
