--- a/src/components/base-head/OpenGraph.astro
+++ b/src/components/base-head/OpenGraph.astro
@@ -1,7 +1,4 @@
-<meta
-  property="og:url"
-  content="https://www.honkfestwest.org{ Astro.request.url }"
-/>
+<meta property="og:url" content={Astro.request.url} />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HONK! Fest West" />
 <meta
@@ -10,11 +7,11 @@
 />
 <meta
   property="og:image"
-  content="https://ik.imagekit.io/thegoldendino/hfw/2023/OpenGraph_du37pbqDz.png?updatedAt=1674584467015"
+  content={`${Astro.request.url}images/2024/OpenGraph.png`}
 />
 <meta property="og:image:alt" content="HONK! Fest West 2024" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="628" />
+<meta property="og:image:width" content="1217" />
+<meta property="og:image:height" content="1217" />
 <meta property="og:site_name" content="HONK! Fest West" />
 <meta property="og:start_time" content="2024-05-31" />
 <meta property="og:end_time" content="2024-06-02" />
