--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,8 +34,8 @@ const activeListItem = (link: string) => {
         src="https://ik.imagekit.io/thegoldendino/hfw/2023/logo-2023_zZNEDpiqu.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668291679349"
         alt="HONK! Fest West"
         format="png"
-        width={427}
-        height="199"
+        width="557"
+        height="260"
         class="w-auto mx-auto hover:transition ease-in hover:scale-105"
       />
     </a>
