--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -1,9 +1,10 @@
 ---
-import OpenGraph from './OpenGraph.astro';
-import EventSchema from './EventSchema.astro';
-import '@styles/global.css';
+import { ViewTransitions } from "astro:transitions";
+import OpenGraph from "./OpenGraph.astro";
+import EventSchema from "./EventSchema.astro";
+import "@styles/global.css";
 
-const { title = '' } = Astro.props;
+const { title = "" } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -14,6 +15,7 @@ const { title = '' } = Astro.props;
 />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <title>{title}</title>
+<ViewTransitions />
 <OpenGraph />
 <EventSchema />
 <slot />
