remove old content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,11 +33,11 @@ import BandAppDeadline from "@components/home/BandAppDeadline.astro";
       <NewsletterForm />
     </section>
 
-    <article
+    <!-- <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <BandAppDeadline />
-    </article>
+    </article> -->
 
     <!-- <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
