--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -1,15 +1,15 @@
 ---
-import BaseLayout from '@layouts/BaseLayout.astro';
-import Title from '@components/Title.astro';
-import BackToTop from '@components/BackToTop.astro';
-import MarkdownContent from '@components/MarkdownContent.astro';
-import { rawContent as info } from '@data/donate_info.md';
+import BaseLayout from "@layouts/BaseLayout.astro";
+import Title from "@components/Title.astro";
+import BackToTop from "@components/BackToTop.astro";
+import MarkdownContent from "@components/MarkdownContent.astro";
+import { rawContent as info } from "@data/donate_info.md";
 ---
 
 <BaseLayout title="Donate">
   <div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
     <div class="w-full md:w-1/3 flex flex-col gap-5">
-
+      <!-- 
       <div class="content-container">
         <div class="flex flex-col items-center gap-y-5 my-2">
           <Title title="#GivingTuesday" subtitle="2023" />
@@ -23,7 +23,7 @@ import { rawContent as info } from '@data/donate_info.md';
             marginWidth="0"
             frameBorder="0"></iframe>
         </div>
-      </div>
+      </div> -->
       <div class="content-container">
         <div class="flex flex-col items-center gap-y-5 my-2">
           <a
