Portal | Add expenses form

--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -3,7 +3,7 @@ import FestivalCountDown from "@components/FestivalCountDown.svelte";
 import "@styles/global.css";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -130,6 +130,37 @@ import "@styles/global.css";
                   class="block md:hidden mt-3 font-semibold text-blue-500 hover:text-blue-600 ml-3"
                   href="https://forms.gle/kpzfuyKpsTD8Tx6p8"
                   >https://forms.gle/kpzfuyKpsTD8Tx6p8</a
+                >
+              </div>
+            </div>
+          </section>
+          <section class="w-full">
+            <div class="rounded-lg bg-white overflow-hidden shadow">
+              <div class="p-4 lg:px-0 lg:py-6">
+                <a
+                  class="pl-6 hidden lg:block font-semibold text-blue-500 hover:text-blue-600"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdtNm5v_kzqrHlnXEtuk1ISOMCnomtc2qpSULXLBelcVzDsRg/viewform?usp=sf_link"
+                >
+                  &gt; Goto Form</a
+                >
+                <iframe
+                  src="https://docs.google.com/forms/d/e/1FAIpQLSdtNm5v_kzqrHlnXEtuk1ISOMCnomtc2qpSULXLBelcVzDsRg/viewform?embedded=true"
+                  width="640"
+                  height="2650"
+                  frameborder="0"
+                  marginheight="0"
+                  marginwidth="0">Loading…</iframe
+                >
+                <h2
+                  class="text-base font-medium block md:hidden bg-teal-500 text-teal-100 px-3 py-1 rounded"
+                  id="calendar-title"
+                >
+                  Expenses
+                </h2>
+                <a
+                  class="block md:hidden mt-3 font-semibold text-blue-500 hover:text-blue-600 ml-3"
+                  href="https://forms.gle/Qk4Lc4ih1Tp5t62k8"
+                  >https://forms.gle/Qk4Lc4ih1Tp5t62k8</a
                 >
               </div>
             </div>
